Day 25 - Karger's algorithm and refactoring